# arcsjs-provable

./: .gitignore  Cargo.toml  README.md
ibis/: .gitignore  Cargo.toml  README.md  build.rs  checking.json  chromium.json  converter.mjs  demo.json  ibis.d.ts  ibis.js  ibis_d3.js  out.json  possible.json  todo.json  todo.md  wasm_watch.sh  watch.html  watch.sh
ibis/benches/: all.rs  checking_and_planning.rs  checking_only.rs  demo.rs  utils.rs
ibis/docs/: crates.js  help.html  idealised_grammar.md  search-index.js  settings.html  source-files.js  src-files.js
ibis/docs/bumpalo/: all.html  enum.AllocOrInitError.html  index.html  sidebar-items.js  struct.AllocErr.html  struct.Bump.html  struct.ChunkIter.html  struct.ChunkRawIter.html
ibis/docs/cfg_if/: all.html  index.html  macro.cfg_if.html
ibis/docs/chrono/: all.html  constant.MAX_DATE.html  constant.MAX_DATETIME.html  constant.MIN_DATE.html  constant.MIN_DATETIME.html  enum.Month.html  enum.RoundingError.html  enum.SecondsFormat.html  enum.Weekday.html  index.html  sidebar-items.js  struct.Date.html  struct.DateTime.html  struct.Duration.html  struct.Months.html  struct.ParseMonthError.html  struct.ParseWeekdayError.html  trait.Datelike.html  trait.DurationRound.html  trait.SubsecRound.html  trait.Timelike.html
ibis/docs/console_error_panic_hook/: all.html  fn.hook.html  fn.set_once.html  index.html
ibis/docs/crepe/: all.html  index.html  macro.crepe!.html  macro.crepe.html  sidebar-items.js
ibis/docs/dot/: all.html  fn.main.html  index.html
ibis/docs/fixedbitset/: all.html  index.html  struct.Difference.html  struct.FixedBitSet.html  struct.Intersection.html  struct.Ones.html  struct.SymmetricDifference.html  struct.Union.html  (+1 more)
ibis/examples/: demo.json  pipeline.mjs  possible.json
ibis/ibis_macros/: Cargo.toml
ibis/libs/: arcsjs.json  rust.json  typescript.json
ibis/pkg/: README.md  ibis.d.ts  ibis.js  ibis_bg.wasm  ibis_bg.wasm.d.ts  package.json  viz.js
ibis/playground/: converter.js  file-pane.js  index.html  playground.js  styles.css
ibis/quill_tests/: FontsByFamilyRecipe.mjs  FullDemoRecipe.mjs  LocalFontsRecipe.mjs  PhotosByDateRecipe.mjs  QuillFontPickerRecipe.mjs  all.mjs
ibis/src/: context.rs  d3.rs  dot.rs  ent.rs  error.rs  lib.rs  recipe_to_dot.rs  recipes.rs  recipies.rs  solution.rs  solution_data.rs  solution_id.rs  to_dot_impls.rs  type_parser.rs  type_parser_cache.rs  type_struct.rs  util.rs
ibis/tests/: checks_and_claims.rs  checks_and_claims_from_types.rs  flags.rs  generics.rs  graphs.rs  product_types.rs  round_trip.rs  simplified_generics.rs  subtyping.rs  typed_graph.rs  union_types.rs  utils.rs
ibis/watch/: index.html  reload.js  styles.css
src/: context.rs  (+7 more)
(+7399 files in other folders)
