[package]
name = "arcsjs-ibis"
version = "0.1.0"
edition = "2021"

[lib]
name = "ibis"
path = "src/lib.rs"

[features]
default = []
ancestors = [] # Support the tracking of ancestor solutions

[dependencies]
paste = "1.0.6"
crepe = "0.1.5"
lazy_static = "1.4.0"
ibis_macros = { package = "arcsjs_ibis_macros", path = "./ibis_macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev_dependencies]
pretty_assertions = "1.0.0"
