[package]
name = "arcsjs-ibis"
version = "0.1.0"
edition = "2021"
description = "Ibis - a knowledge engine for type checking asynchronously communicating modules"
repository = "https://github.com/project-oak/arcsjs-provable"
license = "See LICENSE"
build = "build.rs"

[lib]
name = "ibis"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
# cdylib is for wasm
# rlib is for native

[features]
default = [ "dot", "wasm" ]
ancestors = [] # Support the tracking of ancestor solutions
dot = [] # Support the generation of dot graphs (for debugging)
wasm = [ "wasm-bindgen", "console_error_panic_hook" ] # Support wasm-bindgen API

[dependencies]
shadow-rs = { version = "0.9", default-features = false }
nom = "7.1.0"
paste = "1.0.6"
crepe = "0.1.6"
lazy_static = "1.4.0"
ibis_macros = { package = "arcsjs_ibis_macros", path = "./ibis_macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2.79", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
pretty_assertions = "1.0.0"
criterion = { version = "0.3", features = ["html_reports"] }

[build-dependencies]
shadow-rs = "0.9"

[profile.release]
opt-level = "z"
lto = "fat"
debug = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-mutable-globals"]

[[bench]]
name = "all"
harness = false
